force-app/main/default/objects/DataTest__c/DataTest__c.object-meta.xml
<CustomObject>
    <label>Data Test</label>
    <nameField>
        <label>Test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>