force-app/main/default/objects/DataTest__c/fields/Level1__c.field-meta.xml
<CustomField>
    <fullName>Level1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Level1</label>
    <type>Checkbox</type>
</CustomField>