force-app/main/default/objects/DataTest__c/fields/Level2__c.field-meta.xml
<CustomField>
    <fullName>Level2__c</fullName>
    <label>Level2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Level1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>X</fullName>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>