force-app/main/default/objects/DataTest__c/fields/Level3__c.field-meta.xml
<CustomField>
    <fullName>Level3__c</fullName>
    <label>Level3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Level2__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A1</fullName>
            </value>
            <value>
                <fullName>A2</fullName>
            </value>
            <value>
                <fullName>B1</fullName>
            </value>
            <value>
                <fullName>B2</fullName>
            </value>
            <value>
                <fullName>X1</fullName>
            </value>
            <value>
                <fullName>X2</fullName>
            </value>
            <value>
                <fullName>Y1</fullName>
            </value>
            <value>
                <fullName>Y2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>