force-app/main/default/objects/DataTest__c/fields/Lookup__c.field-meta.xml
<CustomField>
    <fullName>Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>lookup account field description</description>
    <inlineHelpText>this is the help text on the field setup</inlineHelpText>
    <label>Lookup (Account)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Data Tests</relationshipLabel>
    <relationshipName>Data_Tests</relationshipName>
    <type>Lookup</type>
</CustomField>