force-app/main/default/objects/DataTest__c/fields/Lvl2B__c.field-meta.xml
<CustomField>
    <fullName>Lvl2B__c</fullName>
    <label>Lvl2B</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Level2__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>G</fullName>
            </value>
            <value>
                <fullName>H</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>