force-app/main/default/objects/DataTest__c/fields/MultiSelectPicklist__c.field-meta.xml
<CustomField>
    <fullName>MultiSelectPicklist__c</fullName>
    <label>MultiSelectPicklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>a</fullName>
                <label>first value first value</label>
            </value>
            <value>
                <fullName>b</fullName>
                <label>second value second value</label>
            </value>
            <value>
                <fullName>c</fullName>
                <label>third value third value</label>
            </value>
            <value>
                <fullName>d</fullName>
                <label>fourth value fourth value</label>
            </value>
            <value>
                <fullName>e</fullName>
                <label>fifth value fifth value</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>