force-app/main/default/objects/DataTest__c/fields/Picklist__c.field-meta.xml
<CustomField>
    <fullName>Picklist__c</fullName>
    <label>Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>a</fullName>
            </value>
            <value>
                <fullName>b</fullName>
            </value>
            <value>
                <fullName>c</fullName>
            </value>
            <value>
                <fullName>d</fullName>
            </value>
            <value>
                <fullName>e</fullName>
            </value>
            <value>
                <fullName>fifthValue</fullName>
                <isActive>false</isActive>
                <label>fifthValue</label>
            </value>
            <value>
                <fullName>firstValue</fullName>
                <isActive>false</isActive>
                <label>firstValue</label>
            </value>
            <value>
                <fullName>fourthValue</fullName>
                <isActive>false</isActive>
                <label>fourthValue</label>
            </value>
            <value>
                <fullName>secondValue</fullName>
                <isActive>false</isActive>
                <label>secondValue</label>
            </value>
            <value>
                <fullName>thirdValue</fullName>
                <isActive>false</isActive>
                <label>thirdValue</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>