force-app/main/default/objects/DataTest__c/fields/PicklistB__c.field-meta.xml
<CustomField>
    <fullName>PicklistB__c</fullName>
    <label>PicklistB</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Picklist__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A1</fullName>
            </value>
            <value>
                <fullName>A2</fullName>
            </value>
            <value>
                <fullName>A3</fullName>
            </value>
            <value>
                <fullName>B1</fullName>
            </value>
            <value>
                <fullName>B2</fullName>
            </value>
            <value>
                <fullName>B3</fullName>
            </value>
            <value>
                <fullName>C1</fullName>
            </value>
            <value>
                <fullName>C2</fullName>
            </value>
            <value>
                <fullName>C3</fullName>
            </value>
            <value>
                <fullName>D1</fullName>
            </value>
            <value>
                <fullName>D2</fullName>
            </value>
            <value>
                <fullName>D3</fullName>
            </value>
            <value>
                <fullName>E1</fullName>
            </value>
            <value>
                <fullName>E2</fullName>
            </value>
            <value>
                <fullName>E3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>