force-app/main/default/objects/DataTest__c/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <label>test</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Level1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>xd</fullName>
            </value>
            <value>
                <fullName>xd2</fullName>
            </value>
            <value>
                <fullName>xd3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>