force-app/main/default/objects/DataTest__c/recordTypes/AB.recordType-meta.xml
<RecordType>
    <fullName>AB</fullName>
    <active>true</active>
    <label>AB</label>
</RecordType>