force-app/main/default/objects/DataTest__c/recordTypes/RecordTypeB.recordType-meta.xml
<RecordType>
    <fullName>RecordTypeB</fullName>
    <active>true</active>
    <label>RecordType B</label>
</RecordType>