force-app/main/default/objects/DataTest__c/recordTypes/XY.recordType-meta.xml
<RecordType>
    <fullName>XY</fullName>
    <active>true</active>
    <label>XY</label>
</RecordType>