force-app/main/default/objects/DataTest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Checkbox__c</columns>
    <columns>Currency__c</columns>
    <columns>Date__c</columns>
    <columns>DateTime__c</columns>
    <columns>Email__c</columns>
    <columns>Lookup__c</columns>
    <columns>MultiSelectPicklist__c</columns>
    <columns>Number__c</columns>
    <columns>Percent__c</columns>
    <columns>Phone__c</columns>
    <columns>Picklist__c</columns>
    <columns>TextArea__c</columns>
    <columns>Text__c</columns>
    <columns>Time__c</columns>
    <columns>Url__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>